feat: 레디스 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,7 @@ spring:
         show_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
         use_sql_comments: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
