--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,12 @@ services:
     image: opensearchproject/opensearch:2.13.0
     container_name: opensearch
     environment:
+      - plugins.security.disabled=true
       - discovery.type=single-node
       - bootstrap.memory_lock=true
+      - OPENSEARCH_SECURITY_DISABLED=true
       - OPENSEARCH_INITIAL_ADMIN_PASSWORD=OpenSearch#2025
+      - OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m
     ulimits:
       memlock:
         soft: -1
